stylesheet.less
/* ... */
.header-feature {
	> * {
		float: left;
	}
	.companyname {
		padding-top: 1.35em;
		padding-left: 10px;
		max-width: 66%;
	}
	.logo {
		line-height: 0;
		margin: 9px 0;
	}
}

// Feature Header
.widget.feature .feature-bgimg .content {
	max-width: 960px;
	margin: 0 auto;
	display: block;
	padding-top: 120px;
	.spare {
		width: 50%;
		margin-right: 50%;
		padding: 25px;
		background-color: @color-swatch2;
		background-color: fadeout(@color-swatch2, 50%);
	}
	button.btn {
		background-color: @font-swatch7-color;
		color: @font-swatch7-background-color;
		&:hover {
			background-color: darken(@font-swatch9-color, 5%);
		}
	}
}

.widget {
	&.feature {
		h2 {
			padding-bottom: .1em;
		}
		h3 {
			padding-bottom: 1em;
		}
	}
}

// Navigation
.widget .extendednavigation > ul {
	#menu-item_1 {
		border-left: 1px solid darken(@color-swatch7, 10%);
	}
	li {
		border-right: 1px solid darken(@color-swatch7, 10%);
	}
	li a, li.folder > .text {
		padding: 20px 30px;
	}
	li.folder > .text {
		padding-right: 40px;
	}
	li.folder {
		margin-right: 0;
	}
	li.folder:after {
		right: 25px;
		top: 47%;
		border-top-color: @font-swatch6-color;
	}
	li li a {
		padding: 15px 30px;
	}
	li:hover {
		ul {
			right: -1px;
		}
	}
}

// Main / Page
.main {
	padding: 20px 0;
}

// Button styles
.contactform button.btn,
button.btn,
.btn,
.widget.profile form button,
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button,
.clicktocall a,
.signupform fieldset button,
.blog-search-form button,
.widget.socialicons span a,
.widget.profile .bk-profile-socialicons span a,
.widget.feature .feature-bgimg .content button,
.template-footer .widget.profile .bk-profile-socialicons span a,
.blog-search-form button,
.widget.ecombasket .ecombasket-list-container .ecombasket-checkout-wrap .ecombasket-checkout-link,
.widget.ecomcheckout table tr td .checkout-quantitybtn button,
.widget.ecomcheckout .checkout-order-button,
.blog-post-more-link a,
.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select {
	margin: 0;
	min-width: 70px;
	border: 0;
	display: inline-block;
	cursor: pointer;
	background-color: @font-swatch7-background-color;
	-webkit-appearance: none;
	font-family:@font-swatch7-font-family;
	font-weight: @font-swatch7-font-weight;
	-webkit-font-smoothing: antialiased;
	color:@font-swatch7-color;
	line-height:@font-swatch7-line-height;
	letter-spacing: @font-swatch7-letter-spacing;
	font-size: @font-swatch7-font-size;
	padding: 8px 14px 9px;
	-webkit-transition: .2s;
	-moz-transition: .2s;
	-ms-transition: .2s;
	transition: .2s;
	&:hover {
		background-color: @font-swatch7-background-color-hover;
		text-decoration: none;
	}
}

.widget.ecomcheckout table tr td .checkout-quantitybtn button {
	padding: 0;
}

.widget.tweet a,
.widget.paypalbuynow .widget.button.paypal,
.widget.dropbox button {
	padding-left: 40px;
	display: inline-block;
}

// Forms
fieldset .btn,
fieldset button,
form button {
	vertical-align: middle;
}

.form-group,
.widget.ecomproductslist .productlist-display-form .form-group,
.widget.ecomproductslist .productlist-item-count .form-group {
	padding-bottom: 10px;
	margin-bottom: 0;
}


// Buttons
.widget.feature .feature-bgimg .content button,
.contactform button.btn,
.widget.button button,
.widget .btn,
.widget.profile form button,
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button,
.signupform fieldset button,
.blog-search-submit-button,
.widget.ecomproduct .ecom-product .btn,
.widget.ecomcheckout .checkout-order-button,
.widget.ecombasket .ecombasket-list-container .ecombasket-checkout-wrap .ecombasket-checkout-link,
.widget.ecomcategorieslist ul li a,
.blog-post-more-link a,
.blog-list-footer .paginate-older,
.widget.clicktocall a,
.menu-section-list li a,
.widget.ecombasket .ecombasket-pull {
    border-radius: 0;
    -webkit-appearance: none;
}

input,
input[type=email],
input[type=text],
input[type=search],
textarea,
.contactform input,
.contactform textarea,
.widget.profile form fieldset input {
	margin: 0;
	background-color: @color-swatch1;
	text-indent: 0;
	padding: 8px 9px 10px;
	border: 1px solid darken(@color-swatch1, 10%);
	outline: none;
	-webkit-transition: border .2s;
	-moz-transition: border .2s;
	-ms-transition: border .2s;
	transition: border .2s;
	&:hover, &:focus {
		border: 1px solid darken(@color-swatch1, 20%);
	}
}

button:disabled,
button.btn:disabled:hover,
.widget.ecomcheckout .checkout-order-button:disabled {
	background-color: darken(@color-swatch1, 40%);
	color: @color-swatch1;
	cursor: not-allowed;
	&:hover {
		background-color: darken(@color-swatch1, 50%);
		color: @color-swatch1;
	}
}

.widget.profile form fieldset input,
input[type=email],
input[type=text],
input[type=search],
.signupform fieldset input {
	height: 41px;
}

.widget.profile, .widget.signupform, .widget.blogsearch {
	input[type=email], input[type=search] {
		width: 100%;
		padding-right: 74px;
		margin-right: -70px;
	}
}

textarea {
	resize: vertical;
}

.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select {
	cursor: pointer;
	-webkit-appearance: none;
	-webkit-border-radius: 0;
	position: relative;
	background-image: image('/images/arrow-down.png');
	background-repeat: no-repeat;
	background-position: right 12px center;
	background-position-x: 98%;
	background-position-y: 53%;
	margin-bottom: 12px;
	padding-right: 33px;
    -moz-appearance:none;
}

select::-ms-expand {
    display: none;
}

.productlist-search {
    label, input[type="search"], .btn {
        display: inline-block;
        vertical-align: middle;
        margin-bottom: 0;
    }
}

.svg {
	.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select, select {
		background-image: image('/images/arrow-down.svg');
	}
}

.ecom-product-long-description {
    margin-top: 1em;
}
/* ... */

